@@ -334,6 +334,8 @@ code {
 
 <p><strong>equipment</strong> | <code>list(item_id)</code> | A list of items that are equipped when starting with this class.</p>
 
+<p><strong>equipment_set</strong> | <code>int, list(item_id) : Equipment set ID, Item IDs</code> | A list of items that are equipped to the specified equipment set when starting with this class.</p>
+
 <p><strong>carried</strong> | <code>list(item_id)</code> | A list of items that are placed in the normal inventorty when starting with this class.</p>
 
 <p><strong>primary</strong> | <code>predefined_string, int : Primary stat name, Default value</code> | Class starts with this value for the specified stat.</p>
